Fixed spacing inside input box, by changing its padding
Padding helps give space to an element while keeping it in the same container

--- a/style.css
+++ b/style.css
@@ -67,6 +67,9 @@ form {
 
 input {
     border: none;
+    font-size: 1.15rem;
+    margin-top: 0.2vh;
+    padding: 3.5px 0 3.5px 7.5px;
 }
 
 input:focus {
